--- a/Gardenguru/about.html
+++ b/Gardenguru/about.html
@@ -2,19 +2,77 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>about. - Gardenguru</title>
+    <title>Gardenguru - your start in gardening.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="header">
-      <a href="index.html" class="logo">Gardenguru</a>
-      <div class="header-pages">
-        <a href="index.html">home</a>
-        <a href="learn.html">learn</a>
-        <a href="exercise.html">exercise</a>
-        <a href="top.html">top</a>
-        <a class="active" href="about.html">about</a>
+
+
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__listlogo">
+          Gardenguru
+        </li>
+        <li class="nav__listitem">study
+          <ul class="nav__listitemdrop">
+            <li>learn</li>
+            <li>exercise</li>
+            <li>top</li>
+          </ul>
+        </li>
+        <li class="nav__listitem">account
+          <ul class="nav__listitemdrop">
+            <li>login</li>
+          </ul>
+        </li>
+        <li href="about.html" class="nav__listitem">about</li>
+      </ul>
+    </nav>
+
+
+    <div class="intro">
+      <div class="text">
+        <h1>Meet the team.</h1>
+      </div>
+    </div>
+
+    <!-- <div class="aboutcontainer">
+      <div class="image">
+        <img src="https://play-lh.googleusercontent.com/kU3eWbEpAZrgppby0OeDhkB-mueICKANZFFMvMgcvKNfj5oWpgydkXtj_zQ7WlzOxw">
+      </div>
+      <div class="text">
+        Lorem ipsum dolor sit amet
+      </div>
+    </div> -->
+
+    <div class="aboutcontainer">
+      <div class="image">
+        <img src="https://play-lh.googleusercontent.com/kU3eWbEpAZrgppby0OeDhkB-mueICKANZFFMvMgcvKNfj5oWpgydkXtj_zQ7WlzOxw">
+      </div>
+      <div class="name">
+        Name Test
+      </div>
+      <div class="text">
+        Lorem ipsum dolor sit amet
+      </div>
+      <div class="buttons">
+        Buttons here
+      </div>
+    </div>
+
+    <div class="aboutcontainer">
+      <div class="image">
+        Image test
+      </div>
+      <div class="name">
+        Name Test
+      </div>
+      <div class="text">
+        Lorem ipsum dolor sit amet
+      </div>
+      <div class="buttons">
+        Buttons here
       </div>
     </div>
 
@@ -22,8 +80,7 @@
       <span id="labelFooter">Gardenguru is made by
       <a href="https://github.com/tabacaruandrei">andrei tabacaru</a>
       and <a href="https://github.com/tabacaruandrei">gabriel ardeleanu</a>.
-      </span>
-      <span id="copyright">Copyright &copy 2022</span> <!-- aici vom folosi php pentru a scrie un script de auto update al anului de copyright -->
+      Copyright &copy 2022</span> <!-- aici vom folosi php pentru a scrie un script de auto update al anului de copyright -->
     </div>
   </body>
 </html>
