--- a/Gardenguru/about.html
+++ b/Gardenguru/about.html
@@ -48,22 +48,26 @@
 
     <div class="aboutcontainer">
       <div class="image">
+        <!-- <img src="https://play-lh.googleusercontent.com/kU3eWbEpAZrgppby0OeDhkB-mueICKANZFFMvMgcvKNfj5oWpgydkXtj_zQ7WlzOxw"> -->
+        <!-- Image test -->
         <img src="https://play-lh.googleusercontent.com/kU3eWbEpAZrgppby0OeDhkB-mueICKANZFFMvMgcvKNfj5oWpgydkXtj_zQ7WlzOxw">
       </div>
       <div class="name">
-        Name Test
+        Tabacaru Andrei
       </div>
       <div class="text">
-        Lorem ipsum dolor sit amet
+        Aspiring web developer with a passion for photography and music.
       </div>
       <div class="buttons">
-        Buttons here
+        <button class="button-3" role="button">Button 3</button>
+        <button class="button-3" role="button">Button 3</button>
+        <button class="button-3" role="button">Button 3</button>
       </div>
     </div>
 
     <div class="aboutcontainer">
       <div class="image">
-        Image test
+        <img src="https://play-lh.googleusercontent.com/kU3eWbEpAZrgppby0OeDhkB-mueICKANZFFMvMgcvKNfj5oWpgydkXtj_zQ7WlzOxw">
       </div>
       <div class="name">
         Name Test
