--- a/Gardenguru/about.html
+++ b/Gardenguru/about.html
@@ -5,6 +5,10 @@
     <title>Gardenguru - your start in gardening.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
 
@@ -31,37 +35,25 @@
     </nav>
 
 
-    <div class="intro">
+    <div class="intro about">
       <div class="text">
         <h1>Meet the team.</h1>
       </div>
     </div>
 
-    <!-- <div class="aboutcontainer">
-      <div class="image">
-        <img src="https://play-lh.googleusercontent.com/kU3eWbEpAZrgppby0OeDhkB-mueICKANZFFMvMgcvKNfj5oWpgydkXtj_zQ7WlzOxw">
-      </div>
-      <div class="text">
-        Lorem ipsum dolor sit amet
-      </div>
-    </div> -->
-
     <div class="aboutcontainer">
       <div class="image">
-        <!-- <img src="https://play-lh.googleusercontent.com/kU3eWbEpAZrgppby0OeDhkB-mueICKANZFFMvMgcvKNfj5oWpgydkXtj_zQ7WlzOxw"> -->
-        <!-- Image test -->
         <img src="https://play-lh.googleusercontent.com/kU3eWbEpAZrgppby0OeDhkB-mueICKANZFFMvMgcvKNfj5oWpgydkXtj_zQ7WlzOxw">
       </div>
       <div class="name">
-        Tabacaru Andrei
+        <span class="aboutinfo">Tabacaru Andrei</span>
       </div>
       <div class="text">
-        Aspiring web developer with a passion for photography and music.
+        <span class="aboutinfo">Student at the Computer Science faculty of Iasi, Romania and aspiring web developer with a passion for photography and music.</span>
       </div>
       <div class="buttons">
-        <button class="button-3" role="button">Button 3</button>
-        <button class="button-3" role="button">Button 3</button>
-        <button class="button-3" role="button">Button 3</button>
+        <a href="https://github.com/tabacaruandrei"><i style="font-size:40px" class="fa">&#xf09b;</i></a>
+        <a href="#"><i style="font-size:40px" class="fa fa-linkedin"></i></a>
       </div>
     </div>
 
@@ -70,13 +62,14 @@
         <img src="https://play-lh.googleusercontent.com/kU3eWbEpAZrgppby0OeDhkB-mueICKANZFFMvMgcvKNfj5oWpgydkXtj_zQ7WlzOxw">
       </div>
       <div class="name">
-        Name Test
+        <span class="aboutinfo">Ardeleanu Gabriel</span>
       </div>
       <div class="text">
-        Lorem ipsum dolor sit amet
+        <span class="aboutinfo">Student at the Computer Science faculty of Iasi, Romania and aspiring game developer.</span>
       </div>
       <div class="buttons">
-        Buttons here
+        <a href="https://github.com/tabacaruandrei"><i style="font-size:40px" class="fa">&#xf09b;</i></a>
+        <a href="#"><i style="font-size:40px" class="fa fa-linkedin"></i></a>
       </div>
     </div>
 
