--- a/Gardenguru/index.html
+++ b/Gardenguru/index.html
@@ -85,6 +85,8 @@
       </div>
     </div>
 
+    <!-- aici ne mai gandim daca punem un container sau nu; sincer, mai bine arata cu un nr. impar -->
+
 <!--    <div class="container2">
       <div class="text">
         Lorem ipsum dolor sit amet
