--- a/Gardenguru/login.html
+++ b/Gardenguru/login.html
@@ -66,6 +66,14 @@
         <div class="title">Register</div>
         <div class="user-details">
           <div class="input-box">
+            <span class="details">First name:<span>
+            <input type="text" name="" value="" placeholder="Enter your given name:" required>
+          </div>
+          <div class="input-box">
+            <span class="details">Last name:<span>
+            <input type="text" name="" value="" placeholder="Enter your family name:" required>
+          </div>
+          <div class="input-box">
             <span class="details">Email address:<span>
             <input type="text" name="" value="" placeholder="Enter your email address:" required>
           </div>
