Added header functionality and footer
- header can now send the user to the page they click on
- improved log-in and register forms
- added a footer that pops out with details about the team and opens up to a survey, a link to the GitHub and a copyright protection of a site with the current year(which we will add in JS)

--- a/Gardenguru/register.html
+++ b/Gardenguru/register.html
@@ -84,41 +84,51 @@
         </li>
         <li class="headeritem">account
           <ul class="headerdropdown">
-            <a href="login.html" class="active"><li>login</li></a>
+            <a href="login.html"><li>login</li></a>
           </ul>
         </li>
         <a href="about.html"><li class="headeritem">about</li></a>
       </ul>
     </header>
 
-    <!-- <div class="introLogin">
-
-    </div> -->
-
     <div class="accountIntro">
-      <div class="introLogin"></div>
+      <div class="introRegister"></div>
 
-      <div class="login">
-        <form class="loginform" action="">
-          <div class="title">Welcome back.</div>
+      <div class="register">
+        <form class="registerform" action="">
+          <div class="title">Create your account.</div>
           <div class="user-details">
             <div class="input-box">
               <span class="details">Username:<span>
               <input type="text" name="" value="" placeholder="Enter your username:" required>
             </div>
             <div class="input-box">
+              <span class="details">First name:<span>
+              <input type="text" name="" value="" placeholder="Enter your given name:" required>
+            </div>
+            <div class="input-box">
+              <span class="details">Last name:<span>
+              <input type="text" name="" value="" placeholder="Enter your family name:" required>
+            </div>
+            <div class="input-box">
+              <span class="details">Email address:<span>
+              <input type="email" name="" value="" placeholder="Enter your email address:" required>
+            </div>
+            <div class="input-box">
               <span class="details">Password:<span>
               <input type="password" name="" value="" placeholder="Enter your password:" required>
-              <a href="#">Forgot your password?</a>
+            </div>
+            <div class="input-box">
+              <span class="details">Confirm password:<span>
+              <input type="password" name="" value="" placeholder="Confirm your password:" required>
             </div>
           </div>
-          <div class="loginbutton">
-            <input type="button" name="" value="Login">
-            <a href="register.html">I don't have an account.</a>
-          </div>
+          <div class="registerbutton">
+            <input type="submit" name="" value="Register">
+        </div>
         </form>
-        <div class="loginPadding"></div>
       </div>
+      <div class="loginPadding"></div>
     </div>
 
 
