--- a/Gardenguru/index.html
+++ b/Gardenguru/index.html
@@ -91,8 +91,8 @@
     </header>
 
     <!-- stef -->
-  <div class="underHeader"> 
-    <div class="messageUnderHeader"> Your garden is your masterpiece</div>
+  <div class="underHeader">
+    <div class="messageUnderHeader">Your garden is your masterpiece.</div>
   </div>
 
   <div class="description_container">
@@ -109,7 +109,7 @@
       </div>
       <div class="descriptionItem">
         <div class="aboutTitle">About Gardenguru</div>
-        <div class="descriptionTitle">What you will learn</div>  
+        <div class="descriptionTitle">What you will learn</div>
         <ul>
           <li>A positive outlook is absolutely essential.</li>
           <li>Even the smallest growth is to be appreciated and celebrated.</li>
@@ -120,14 +120,14 @@
       </div>
     </div>
   </div>
-  
+
 
   <div class="mainContainerIndex">
     <div class="mainTitleIndex">
       START WITH THE BASICS FIRST!
     </div>
     <div class="containerIndexBasics">
-  
+
     <div class="itemIndexBasics">
        <div class="item1IndexBasics">
             <a href=""><img class="imgBasics" src="images/gardeningtools.png" alt="tools"></a>
@@ -142,8 +142,8 @@
           </div>
       </div>
     </div>
-  
-  
+
+
     <div class="itemIndexBasics">
       <div class="item1IndexBasics">
         <a href=""><img class="imgBasics" src="images/gardeingwater.png" alt="water"></a>
@@ -155,10 +155,10 @@
        <div class="descriptionIndexBasics">
         <p>Learn about the importance of water!</p>
         <p>The best gardeners always know the best timing and quantity!</p>
-      </div>       
+      </div>
   </div>
     </div>
-  
+
     <div class="itemIndexBasics">
       <div class="item1IndexBasics" id="imgPaddingSoil">
         <a href=""><img class="imgBasics" src="images/gardeningsoil.png" alt="soil"></a>
@@ -170,10 +170,10 @@
        <div class="descriptionIndexBasics">
         <p>The soil is a storehouse for all the elements plants need to grow: nutrients, organic matter, air, and water</p>
         <p>Learn how to choose the best one for your garden!</p>
-      </div>       
+      </div>
   </div>
     </div>
- 
+
     <div class="itemIndexBasics">
       <div class="item1IndexBasics">
         <a href=""><img class="imgBasics" src="images/gardeningweather.png" alt="weather"></a>
@@ -185,13 +185,13 @@
         <div class="descriptionIndexBasics">
         <p>Knowing the local climate is a key factor to successful gardening.</p>
         <p>Always check the weather before starting to work in the garden!</p>
-        </div>        
+        </div>
   </div>
     </div>
- 
+
   </div>
   </div>
- 
+
   <div class="mainContainerIndex">
     <div class="mainTitleIndex">
       NOW CHOOSE WHAT KIND OF GARDEN YOU WANT!
@@ -218,7 +218,7 @@
     </div>
   </div>
 
-   
+
     <div class="footer">
       <div class="footerintro">
         <span id="labelFooter">Gardenguru is made by
@@ -227,10 +227,14 @@
         and <a href="https://github.com/sandustefania">Sandu Stefania</a>.
         </span>
       </div>
+
+      <div class="footerabout">
+        <span>Gardenguru is a website that provides a learning environment for both those getting their hands on gardening tools for the first time and those who are already skilled at maintaining their own gardens, aiming to help its users through proper information and interactive quizzes.</span>
+      </div>
+
       <div class="footerdescription">
         <div class="sendquestions">
           <span class="details">Ask us a question:<span>
-          <!-- <input type="text" name="" value="" required> -->
           <textarea name="name" rows="6" cols="30"></textarea>
           <input type="button" name="" value="Submit">
         </div>
