--- a/Gardenguru/login.html
+++ b/Gardenguru/login.html
@@ -138,10 +138,14 @@
         and <a href="https://github.com/sandustefania">Sandu Stefania</a>.
         </span>
       </div>
+
+      <div class="footerabout">
+        <span>Gardenguru is a website that provides a learning environment for both those getting their hands on gardening tools for the first time and those who are already skilled at maintaining their own gardens, aiming to help its users through proper information and interactive quizzes.</span>
+      </div>
+
       <div class="footerdescription">
         <div class="sendquestions">
           <span class="details">Ask us a question:<span>
-          <!-- <input type="text" name="" value="" required> -->
           <textarea name="name" rows="6" cols="30"></textarea>
           <input type="button" name="" value="Submit">
         </div>
