--- a/Gardenguru/login.html
+++ b/Gardenguru/login.html
@@ -154,9 +154,10 @@
           <span id="descriptionFooter">
           <a href="https://github.com/tabacaruandrei"><i style="font-size:40px" class="fa">&#xf09b;</i></a>
           </span>
-          <span id="footercopyright">&copy 2022</span> <!-- aici vom folosi php pentru a scrie un script de auto update al anului de copyright -->
+          <span id="footercopyright">&copy <span id="footeryear" onload="getCurrentYear"></p> </span>
         </div>
       </div>
     </div>
+    <script type="text/javascript" src="scriptfile.js"></script>
   </body>
 </html>
