--- a/Gardenguru/index.html
+++ b/Gardenguru/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body>
+  <body onload="getCurrentYear()">
 
 
     <header class="header">
@@ -243,9 +243,10 @@
           <span id="descriptionFooter">
           <a href="https://github.com/tabacaruandrei"><i style="font-size:40px" class="fa">&#xf09b;</i></a>
           </span>
-          <span id="footercopyright">&copy 2022</span> <!-- aici vom folosi php pentru a scrie un script de auto update al anului de copyright -->
+          <span id="footercopyright">&copy <span id="footeryear" onload="getCurrentYear"></p> </span>
         </div>
       </div>
     </div>
+    <script type="text/javascript" src="scriptfile.js"></script>
   </body>
 </html>
