--- a/Gardenguru/MyProfile.html
+++ b/Gardenguru/MyProfile.html
@@ -93,7 +93,7 @@
     <div class="MP_container">
         <div class="UserCard div_cell">
             <div class="ProfileIcon">
-                <img src="C:\Users\Ardeleanu Gabriel\Desktop\account_photo.png" alt="ProfileImage" width=150px>
+                <img src="images\account_photo.png" alt="ProfileImage" width=150px>
             </div>
             <div class="Username">
                 USERNAME
