Major javascript changes
- (almost) finished javascript for index, register, login and about
- added slide-in and fade-in animations, triggered while scrolling, for both index and about
- added valid/invalid animations for login/register textboxes, triggered every time there is an input change; if the input is invalid in the register form, a text that specifies the error will appear
- blocked submit ability while there is at least one invalid input; the button unblocks itself when all of the inputboxes contain valid text
- better hover animations(now with deselect transitions)

--- a/Gardenguru/register.html
+++ b/Gardenguru/register.html
@@ -100,37 +100,38 @@
           <div class="user-details">
             <div class="input-box">
               <span class="details">Username:<span>
-              <input id="user" type="text" name="" value="" placeholder="Enter your username:" required maxlength="16">
-              <span id="usererror"></span>
+              <input class="inputlogin" id="user" type="text" name="" value="" placeholder="Enter your username:" maxlength="16">
+              <span class="loginerror">Username not correct</span>
+              <!-- <span id="values"></span> -->
             </div>
             <div class="input-box">
               <span class="details">First name:<span>
-              <input id="firstname" type="text" name="" value="" placeholder="Enter your given name:" required>
-              <span id="firstnameerror"></span>
+              <input class="inputlogin" id="firstname" type="text" name="" value="" placeholder="Enter your given name:">
+              <span class="loginerror">Username not correct</span>
             </div>
-            <div class="input-box">
+            <!-- <div class="input-box">
               <span class="details">Last name:<span>
               <input id="lastname" type="text" name="" value="" placeholder="Enter your family name:" required>
-              <span id="lastnameerror"></span>
-            </div>
+              <span class="loginerror">Username not correct</span>
+            </div> -->
             <div class="input-box">
               <span class="details">Email address:<span>
-              <input id="email" type="email" name="" value="" placeholder="Enter your email address:" required>
-              <span id="emailerror"></span>
+              <input class="inputlogin" id="email" type="email" name="" value="" placeholder="Enter your email address:">
+              <span class="loginerror">Username not correct</span>
             </div>
             <div class="input-box">
               <span class="details">Password:<span>
-              <input id="password" type="password" name="" value="" placeholder="Enter your password:" required maxlength="30">
-              <span id="pwerror"></span>
+              <input class="inputlogin" id="password" type="password" name="" value="" placeholder="Enter your password:" maxlength="30">
+              <span class="loginerror">Username not correct</span>
             </div>
             <div class="input-box">
               <span class="details">Confirm password:<span>
-              <input id="verifypassword" type="password" name="" value="" placeholder="Confirm your password:" required maxlength="30">
-              <span id="verifypwerror"></span>
+              <input class="inputlogin" id="verifypassword" type="password" name="" value="" placeholder="Confirm your password:" maxlength="30">
+              <span class="loginerror">Username not correct</span>
             </div>
           </div>
           <div class="loginbutton">
-            <input type="submit" name="" value="Register">
+            <input type="submit" id="loginbutton" value="Register">
         </div>
         </form>
       </div>
@@ -175,5 +176,6 @@
       </div>
     </div>
     <script type="text/javascript" src="scriptfile.js"></script>
+    <script type="text/javascript" src="register_verify.js"></script>
   </body>
 </html>
