--- a/Gardenguru/login.html
+++ b/Gardenguru/login.html
@@ -104,16 +104,16 @@
           <div class="user-details">
             <div class="input-box">
               <span class="details">Username:<span>
-              <input type="text" name="" value="" placeholder="Enter your username:" required>
+              <input type="text" id="user" name="" value="" placeholder="Enter your username:" maxlength="25">
             </div>
             <div class="input-box">
               <span class="details">Password:<span>
-              <input type="password" name="" value="" placeholder="Enter your password:" required>
+              <input type="password" id="password" name="" value="" placeholder="Enter your password:" maxlength="30">
               <a href="#">Forgot your password?</a>
             </div>
           </div>
           <div class="loginbutton">
-            <input type="button" name="" value="Login">
+            <input type="button" id="loginbutton" name="" value="Login">
             <a href="register.html">I don't have an account.</a>
           </div>
         </form>
@@ -159,5 +159,6 @@
       </div>
     </div>
     <script type="text/javascript" src="scriptfile.js"></script>
+    <script type="text/javascript" src="login_verify.js"></script>
   </body>
 </html>
